Bug 656284 - Fix clipped XUL progressmeter on Windows. r=roc